--- a/package.json
+++ b/package.json
@@ -3,15 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@lexical/code": "^0.34.0",
+    "@lexical/list": "^0.34.0",
+    "@lexical/plain-text": "^0.34.0",
+    "@lexical/react": "^0.34.0",
+    "@lexical/rich-text": "^0.34.0",
+    "@svgr/webpack": "6.5.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "@tiptap/extension-bubble-menu": "^3.2.0",
+    "@tiptap/extension-color": "^3.2.0",
+    "@tiptap/extension-table": "^3.2.0",
+    "@tiptap/extension-text-style": "^3.2.0",
+    "@tiptap/pm": "^3.2.0",
+    "@tiptap/react": "^3.2.0",
+    "@tiptap/starter-kit": "^3.2.0",
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
+    "amqplib": "^0.10.8",
+    "highlight.js": "^11.11.1",
+    "html-to-text": "^9.0.5",
+    "lexical": "^0.34.0",
+    "quill": "^2.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
+    "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.8.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "svgo": "3.0.2",
+    "web-vitals": "^2.1.4",
+    "webpack-dev-server": "4.15.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,5 +60,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "css": "^3.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   }
 }
